<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/barnOwl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barn_owl"
            android:onClick="barnowlActivity"/>

        <Button
            android:id="@+id/blueWhale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_whale"
            android:onClick="bluewhaleActivity"/>

        <Button
            android:id="@+id/bobCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bobcat"
            android:onClick="bobcatActivity"/>

        <Button
            android:id="@+id/brownBear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brown_bear"
            android:onClick="brownbearActivity"/>

        <Button
            android:id="@+id/banjoCatfish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banjo_catfish"
            android:onClick="banjocatfishActivity"/>

        <Button
            android:id="@+id/barredOwl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barred_owl"
            android:onClick="barredowlActivity"/>

        <Button
            android:id="@+id/beardedDragon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bearded_dragon"
            android:onClick="beardeddragonActivity"/>

        <Button
            android:id="@+id/bat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bat"
            android:onClick="batActivity"/>

        <Button
            android:id="@+id/bengalTiger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bengal_tiger"
            android:onClick="bengaltigerActivity"/>

        <Button
            android:id="@+id/blueJay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_jay"
            android:onClick="bluejayActivity"/>
    </LinearLayout>

</ScrollView>